--- a/ERS_MylesC/src/main/webapp/WEB-INF/web.xml
+++ b/ERS_MylesC/src/main/webapp/WEB-INF/web.xml
@@ -11,4 +11,14 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>NewUserServlet</display-name>
+    <servlet-name>NewUserServlet</servlet-name>
+    <servlet-class>com.revature.servlet.NewUserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NewUserServlet</servlet-name>
+    <url-pattern>/newUser</url-pattern>
+  </servlet-mapping>
 </web-app>
