--- a/ERS_MylesC/src/main/webapp/WEB-INF/web.xml
+++ b/ERS_MylesC/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>InfoServlet</servlet-name>
-    <url-pattern>/InfoServlet</url-pattern>
+    <url-pattern>/ticketInfo</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
